Week 18/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /deployment-one
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /deployment-two
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80


## kubectl apply -f ingress.yml
